[metadata]
name = luma.examples
author = Richard Hull
author_email = richard.hull@destructuring-bind.org
description = Examples for the luma libraries.
long_description = file: README.rst
long_description_content_type = text/x-rst
keywords = raspberry pi, orange, banana pi, rpi, opi, sbc, oled, lcd, led, display, screen, spi, i2c
url = https://github.com/rm-hull/luma.examples
license = MIT
classifiers =
    License :: OSI Approved :: MIT License
    Development Status :: 5 - Production/Stable
    Intended Audience :: Education
    Intended Audience :: Developers
    Topic :: Education
    Topic :: System :: Hardware
    Topic :: System :: Hardware :: Hardware Drivers
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
python_requires = >=3.7, <4
install_requires =
    luma.core>=2.4.0
    luma.emulator>=1.3.0
    luma.oled>=3.6.0
    luma.lcd>=2.5.0
    luma.led_matrix>=1.5.0
    argcomplete
tests_require =
    pytest
    pytest-cov
    pytest-timeout

[options.extras_require]
docs = sphinx>=1.5.1
qa =
    flake8
    rstcheck
test =
    pytest
    pytest-cov
    pytest-timeout

[flake8]
ignore = E127, E128, E241, E402, E501, E722, E731, E741
exclude =
    .ropeproject,
    .tox,
    .eggs,
    # No need to traverse our git directory
    .git,
    # There's no value in checking cache directories
    __pycache__,
    doc,
    build,
    dist,
    conf

[aliases]
test=pytest
